# blatt-7-aufgabe-1-aloneteam

./: CMakeLists.txt
avl/: AVL.cpp  AVL.h
test/: CMakeLists.txt  testAVL.cpp  testAVL.h
